RESOLVED FIXED53823
Print layout sometimes seen on screen
https://bugs.webkit.org/show_bug.cgi?id=53823
Summary Print layout sometimes seen on screen
Alexey Proskuryakov
Reported 2011-02-04 16:13:09 PST
There are several instances where print layout can show up - and even remain! - on screen with WebKit2. Patch forthcoming.
Attachments
proposed patch (6.28 KB, patch)
2011-02-04 16:23 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2011-02-04 16:23:12 PST
Created attachment 81314 [details] proposed patch
Alexey Proskuryakov
Comment 2 2011-02-04 16:24:34 PST
One case where print layout can still show up is during window resizing. That's not a regression from WebKit1 - the whole window would turn blank in the same circumstances before, including window chrome!
Alexey Proskuryakov
Comment 3 2011-02-04 16:28:28 PST
Note You need to log in before you can comment on or make changes to this bug.